--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,6 @@ x86/
 [Aa][Rr][Mm]/
 [Aa][Rr][Mm]64/
 bld/
-[Bb]in/
 [Oo]bj/
 [Ll]og/
 
@@ -87,6 +86,11 @@ StyleCopReport.xml
 *.pidb
 *.svclog
 *.scc
+*.user
+*.filters
+*.vcxproj
+*.sln
+
 
 # Chutzpah Test files
 _Chutzpah*
