--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,5 @@ dist: xenial
 script:
   - git ls-files calcApp/ | xargs clang-format -i && git diff --exit-code
   - make
+  - make test
+  - make runtest
